# cdm-data-loader-utils

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  env.yml  pyproject.toml  requirements.txt  setup.py
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/workflows/: docker_build.yaml  tests.yml
biochemistry_loader_scripts/biochem/: Compile_Biochemistry.py  Loading_MSD_Data.ipynb  Loading_Structures.ipynb  Sample_MSD_Compounds.json  Sample_MSD_Reactions.json
biochemistry_loader_scripts/biochem/example_data/: Sample_Structures.txt
biochemistry_loader_scripts/obo/: kegg.py  metacyc.py  modelseed.py  seed.py
biochemistry_loader_scripts/obo/example_data/: KEGG_pathways_example.tsv  MSD_Compounds_example.json  MSD_Reactions_example.json  MetaCyc_pathways_example.tsv
cdm_data_loader_utils/: __init__.py  etl_genome.py
cdm_data_loader_utils/core/: genome.py  hash_seq.py
cdm_data_loader_utils/etl/: load_mysql.py
cdm_data_loader_utils/io/: genome.py
dataset/: part-00000-0a0f761f-f2b0-4dff-92cf-9b3ba26a2b25-c000.snappy.parquet
docs/: Markdown  SOP.md  Uniprot_download.md  incremental_data.md  refseq_walkthrough.md  uniprot.md
genome_loader_scripts/: calculate_hash.py  genome_loader.py
notebooks/: pangenome_refseq.py  uniprot_prefixes.ipynb
notebooks/uniprot_prefix_investigation/: prefix_remapper_investigation.ipynb  uniprot_prefixes.ipynb
notebooks/uniprot_prefix_investigation/code/: prefix_audit.py  prefix_transformer.py  uniprot_prefixes.ipynb
notebooks/uniprot_prefix_investigation/data/: ECOLI_83333_idmapping_selected.tab
scripts/: entrypoint.sh  parse_index.py  run_tests.sh  run_tools.sh
src/: calculate_hash.py  click_importer.py  genome_loader.py  importer.py  test_importer.py
src/cdm_data_loader_utils/audit/: checkpoint.py  metrics.py  rejects.py  run.py  schema.py
src/cdm_data_loader_utils/core/: constants.py
src/cdm_data_loader_utils/parsers/: annotation_parse.py  association_update.py  checkm2.py  fasta.py  gene_association_file.py  genome_loader.py  prefix_audit.py  prefix_governance_report.py  prefix_mapping.py  prefix_normalizer.py  prefix_remapper_investigation.ipynb  registry_alignment.ipynb  shared_identifiers.py  uniprot.py  uniref.py  xml_utils.py
src/cdm_data_loader_utils/pipelines/: uniprot_kb_pipeline.py  uniref_pipeline.py
src/cdm_data_loader_utils/readers/: dsv.py
src/cdm_data_loader_utils/utils/: calculate_hash.py  cdm_logger.py  gz.py  logging.py  minio.py  spark_delta.py  xml_utils.py
src/cdm_data_loader_utils/validation/: dataframe_validator.py  df_nullable_fields.py
src/data/: README_seed_ontology.md  example_rast_annotations.json
src/parsers/: Uniref.py  Uniref_mapping.py  archaea_parsers.py  checkm2.py  fasta.py  gene_association_file.py  genome_loader.py  genome_paths.py  refseq_api.py  testgo_association.py  uniprot.py  uniprot_to_cdm.py  uniref.py  uniref_revise.py
src/utils/: README_rast_seed_mapper.md  calculate_hash.py  rast_seed_mapper.py
tests/: conftest.py  helpers.py  test_archaea_parser.py  test_association_update.py  test_gene_association_file.py  test_genome_loader.py  test_rast_seed_mapper.py  test_refseq_api.py  test_uniprot.py  test_uniref.py  test_utils.py
tests/Uniprot GO dataset/: associated
tests/audit/: conftest.py  test_checkpoint.py  test_metrics.py  test_rejects.py  test_run.py  test_schema.py
tests/data/FW305-3-2-15-C-TSA1/: FW305-3-2-15-C-TSA1_genes.faa  FW305-3-2-15-C-TSA1_genes.gff
tests/data/FW305-C-112.1/: FW305-C-112.1_genes.faa  FW305-C-112.1_genes.gff
tests/data/Gene association/: annotations_data100.csv  normalized_annotation.csv
tests/data/checkm2_file/: headers_only.tsv  (+2 more)
tests/parsers/: conftest.py  test_annotation_parse.py  test_association_update.py  test_bbmap_stats.py  test_checkm2.py  test_gene_association_file.py  test_genome_loader.py  test_genome_paths.py  test_shared_identifiers.py  test_uniprot.py  test_uniprotkb.py  test_uniref.py
tests/readers/: test_dsv.py  test_dsv_read_with_validation.py
tests/refseq_tests/: test_diff_changed_taxids.py  test_fetch_taxon_reports.py  test_hashes_diff.py
tests/uniprot_refactor/: test_uniprot_parsers.py  test_xml_utils.py
tests/utils/: test_gz.py  test_spark_delta.py  test_xml_utils.py
tests/validation/: test_dataframe_validator.py  test_df_nullable_fields.py
uniprot_utils/: uinprot_loader.py  uniProtDatFileParser.py  uniProtDatFileParserTrembl.py  uniprotTSVtoCDMtablesConversion.py  uniprot_textFile_parser.py
uniprot_utils/uniprotTest/: Full_parsed_swissprot_data_test.tsv
(+626 files in other folders)
